--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "koa-router": "^7.0.1",
     "node-fetch": "^1.5.1",
     "node-watch": "^0.3.5",
-    "remotedev-app": "^0.3.3",
+    "remotedev-app": "^0.3.6",
     "yargs": "^4.6.0"
   },
   "devDependencies": {
@@ -52,6 +52,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0"
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.5.0"
   }
 }
