--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
+    "eslint-config-airbnb-base": "^1.0.3",
     "eslint-plugin-import": "^1.5.0"
   }
 }
